--- a/render.yaml
+++ b/render.yaml
@@ -21,9 +21,9 @@ services:
       - key: ALLOWED_HOSTS
         value: mcoop-db.onrender.com,localhost,127.0.0.1
       - key: CSRF_TRUSTED_ORIGINS
-        value: https://mcoop-db.onrender.com,https://mecc-2.vercel.app/
+        value: https://mecc2.onrender.com,https://mecc2.vercel.app/
       - key: CORS_ALLOWED_ORIGINS
-        value: https://mcoop-db.onrender.com,http://localhost:3000,https://mecc-2.vercel.app/
+        value: https://mecc2.onrender.com,http://localhost:3000,https://mecc2.vercel.app/
       - key: DATABASE_URL
         fromDatabase:
           name: mcoop-db
